Added a list of languages.

--- a/mysite.html
+++ b/mysite.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <P>Learning about version control</P>
+    <p>List of languages:</p>
+    <ul>
+        <li>U.S. English</li>
+        <li>Deutsch</li>
+        <li>Français</li>
+        <li>American Sign Language</li>
+    </ul>
 </body>
 </html>
