Added a div element and used style sheet to specify size and color.

--- a/mysite.html
+++ b/mysite.html
@@ -15,5 +15,7 @@
         <li>Français</li>
         <li>American Sign Language</li>
     </ul>
+
+    <div id="colorblock"></div>
 </body>
 </html>
